--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                         <h1>Jose Maria Antunez</h1>
                         <h1>==================</h1>
                         <h1>1 Commit sobre master</h1>
+                        <h2>2 Commit sobre master</h2>
                         <p class="intro">Introducing “Sedna”. A responsive one page website, designed & developed exclusively for Codrops.</p>
 
                         <a href="#" class="btn btn-fill btn-large btn-margin-right">Download</a> <a href="#" class="btn btn-accent btn-large">Learn more</a>
