--- a/index.html
+++ b/index.html
@@ -59,12 +59,8 @@
                     <div class="hero-content text-center">
 
                         <h1>Jose Maria Antunez</h1>
-                        <h1>==================</h1>
-
-                        <h1>1 Commit master</h1>
-                        <h1>2 Commit master</h1>
-                        <h1>3 Commit dev</h1>
-
+                        <h1>11/09/1991</h1>
+                        <h1>Desarrollador .NET</h1>                                                
                         <p class="intro">Introducing “Sedna”. A responsive one page website, designed & developed exclusively for Codrops.</p>
 
                         <a href="#" class="btn btn-fill btn-large btn-margin-right">Download</a> <a href="#" class="btn btn-accent btn-large">Learn more</a>
